--- a/public/partials/match/list.html
+++ b/public/partials/match/list.html
@@ -1,7 +1,38 @@
-<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-init="ctrl.getAllMatches()">
-	<h1>{{ctrl.match}}</h1>
-
-	<span ng-repeat="model in ctrl.matches">
-		{{model}} <br>
-	</span>
+<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-hide="ctrl.collection.length" ng-init="ctrl.getAllMatches()">
+    <div class="row">
+        <div class="col-xs-12 col-lg-12">
+            <h3 class="text-center">Matches are not available!</h3>
+        </div>
+    </div>
+</div>
+<div class="col-xs-12 col-lg-8 col-lg-offset-2" ng-show="ctrl.collection.length">
+    <div class="row">
+        <div class="col-xs-12 col-lg-12">
+            <h3 class="text-center">Match List</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-lg-12">
+            <table class="table table-hover table-bordered table-condensed text-center">
+                <thead>
+                    <tr>
+                        <th class="text-center">Id</th>
+                        <th class="text-center">Team 1</th>
+                        <th class="text-center">Team 2</th>
+                        <th class="text-center">Venue</th>
+                        <th class="text-center">Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="model in ctrl.collection">
+                        <td>{{$index+1}}</td>
+                        <td>{{model.teamOne}}</td>
+                        <td>{{model.teamTwo}}</td>
+                        <td>{{model.venue}}</td>
+                        <td>{{model.date}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
